# laude

./: .eslintrc.js  .firebaserc  .gitignore  CLAUDE.md  README.md  apphosting.yaml  firebase.json  firestore.indexes.json  firestore.rules  package-lock.json  package.json  playwright.config.ts  projectOverview.md  resursecrestine  storage.rules  test-real-scrape.mjs  tsconfig.base.json  tsconfig.laude.json
.claude/agents/: code-reviewer.md  i18n-extractor.md  preflight-auditor.md
.claude/commands/: next.md
.github/workflows/: ci.yml  release-rules.yml
apps/api/: .dockerignore  .env.example  .env.production.example  apphosting.yaml  firestore.indexes.json  jest.config.cjs  package.json  tsconfig.json
apps/extractor/: extract.sh  package.json
apps/laudj/: README.md  index.html  package.json  tsconfig.json  vite.config.ts
apps/laudj/src-tauri/: Cargo.toml  tauri.conf.json
apps/laudj/src-tauri/src/: main.rs
apps/laudstudio/: extract.sh  package.json
apps/laudstudio/pipeline/: pyproject.toml
apps/laudstudio/pipeline/laude_pipeline/: assemble.py
apps/relay/: package.json  tsconfig.json
apps/studio/: extract.sh  package.json  tsconfig.json
apps/web/: .env.development  apphosting.yaml  (+6 more)
apps/web-legacy/: package.json  playwright.config.ts
docs/: API.md  ARCHITECTURE.md  DATA_MODELS.md  FUTURE.md  OVERVIEW.md  README.md  ROADMAP.md  RULES.md  SPEC.md  TESTING_STRATEGY.md  VIEWPORT_CONTRACT.md
playwright-report/: index.html
scripts/: check-boundaries.mjs  e2e-runner.ts  generate-pwa-assets.mjs  poc.sh  rules-test.ts  seed-e2e.ts  wire-backend.mjs
(+322 files in other folders)
