[package]
name = "laudj"
version = "0.1.0"
description = "LauDJ — native shell for the live audio engine (audio engine STUBBED in the PoC)"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
